kubernetes/apps/k8s/home-automation/frigate/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: home-automation
spec:
  ingressClassName: nginx
  rules:
  - host: "cctv.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: frigate
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "cctv.${DOMAIN}"
